Corrected spacing on design page

--- a/src/css/Designs.css
+++ b/src/css/Designs.css
@@ -15,9 +15,8 @@
   padding: 1rem;
   width: 40vw;
   height: 30vh;
-
   margin-left: 14vw;
-  font-size: 25px;
+  font-size: 27px;
 }
 .design-box-one {
   width: 100vw;
